fix batch importer