@@ -1,5 +1,6 @@
 package org.zella.tuapse.importer.impl;
 
+import io.reactivex.Completable;
 import io.reactivex.Observable;
 import io.reactivex.Scheduler;
 import io.reactivex.Single;
@@ -12,6 +13,8 @@ import org.zella.tuapse.storage.Index;
 import org.zella.tuapse.subprocess.Subprocess;
 
 import java.util.List;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 public class DefaultImporter implements Importer {
 
@@ -27,13 +30,16 @@ public class DefaultImporter implements Importer {
     public Observable<LiveTorrent> evalTorrentsData(List<String> hash, Scheduler sc) {
         return Observable.fromIterable(hash)
                 .flatMap(h -> Subprocess.webtorrent(h)
+                        .doOnSuccess(t -> logger.debug("Peers: [" + t.numPeers + "] " + t.name))
                         .subscribeOn(sc)
                         .toObservable().onErrorResumeNext(Observable.empty()));
     }
 
     @Override
     public Single<List<String>> importTorrents(List<StorableTorrent> torrents) {
-        return Observable.fromIterable(torrents)
-                .flatMapSingle(t -> Single.fromCallable(() -> index.insertTorrent(t)).doOnSuccess(s -> logger.info("Imported: " + s))).toList();
+
+        return Completable.fromRunnable(() -> index.insertTorrents(torrents))
+                .andThen(Single.fromCallable((() -> torrents.stream().map(t -> t.infoHash).collect(Collectors.toList()))))
+                .doOnSuccess(s -> logger.info("Imported: " + s.size()));
     }
 }
